# ai-workloads

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: common.yml  docs-file-copy.yml  docs.yml
docker/: README.md  index.html
docker/aiaio/: Makefile
docker/llm-evaluation/: .dockerignore  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  run_inference_and_judge_evaluation.py  run_inference_and_metrics_evaluation.py
docker/llm-evaluation/src/llm_evaluation/: __init__.py  argument_parsers.py
docker/llm-evaluation/src/llm_evaluation/call_inference_container/: call_inference_container.py
docker/llm-evaluation/src/llm_evaluation/data/: data_classes.py
docker/llm-evaluation/src/llm_evaluation/judge/: run_judge_evaluation.py
docker/llm-evaluation/src/llm_evaluation/metrics/: metrics.py  run_metrics_evaluation.py  utils.py
docker/llm-evaluation/tests/: test_call_inference_container.py
docker/llm-evaluation/tests/evaluation_metrics/metrics/: test_run_metrics_evaluation.py
docker/llm-evaluation/tests/llm_evaluation/call_inference_container/: test_call_inference_container.py
docker/llm-evaluation/tests/llm_evaluation/metrics/: test_metrics.py  test_run_metrics_evaluation.py  test_utils.py
docs/: contributing.md  getting-started.md  tutorials.md  workloads.md
helm/: README.md
k8s/: README.md
kaiwo/: README.md
scripts/: mutate_manifest.py
search/: search_index.json
workloads/: README.md  index.html  workloads-overview.md
(+1008 files in other folders)
