[build-system]
requires = ["setuptools"]

[project]
name = "llm-evaluation"
description = "Evaluations for LLMs."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Silo AMD", email = "info@silo.ai" }]
maintainers = [{ name = "Silo AMD", email = "info@silo.ai" }]
classifiers = ["Programming Language :: Python"]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm-evaluation*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
  /(
  | \.git
  )/
  '''

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
log_cli = "0"
log_cli_level = "INFO"

[tool.mypy]
strict = false
files = ["src/**/*.py"]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
